--- a/ms-user/src/main/resources/application.properties
+++ b/ms-user/src/main/resources/application.properties
@@ -3,9 +3,10 @@ server.servlet.context-path=/rest/ms-user
 server.port=8090
 
 # Database configuration
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.defer-datasource-initialization=true
